fix: increase z-index on popup

--- a/src/scss/components/_popup.scss
+++ b/src/scss/components/_popup.scss
@@ -9,7 +9,7 @@
     opacity: 0;
     visibility: hidden;
     transition: all 0.3s ease 0s;
-    z-index: 10;
+    z-index: 20;
     &__container {
         display: flex;
         justify-content: center;
